--- a/pages/19755.html
+++ b/pages/19755.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -317,7 +317,7 @@ margin-left: 0em;
 
 <p>When <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/the">the</a> <a class="existingWikiWord" href="/nlab/show/finite+set">finite set</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo><mo>=</mo><mo stretchy="false">{</mo><mn>1</mn><mo>,</mo><mi>…</mi><mo>,</mo><mi>n</mi><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">(n) = \{1,\dots,n\}</annotation></semantics></math>, then its symmetric group is a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> of <a class="existingWikiWord" href="/nlab/show/cardinality">cardinality</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>!</mo></mrow><annotation encoding="application/x-tex">n!</annotation></semantics></math> = “<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/factorial">factorial</a>”, and one typically writes <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">S_n</annotation></semantics></math> or <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Σ</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">\Sigma_n</annotation></semantics></math>.</p>
 
-<p>(We will cross reference to <a class="existingWikiWord" href="/nlab/show/permutation">permutation</a> for some key notation concepts.)</p>
+<p>(We will make frequent use of the entry <a class="existingWikiWord" href="/nlab/show/permutation">permutation</a> for some key notation and concepts.)</p>
 
 <p>We will concentrate on <strong>finite symmetric groups</strong>.</p>
 
@@ -352,8 +352,24 @@ margin-left: 0em;
 <ul>
 <li><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">S_3</annotation></semantics></math> has a <a class="existingWikiWord" href="/nlab/show/group+presentation">presentation</a></li>
 </ul>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">⟨</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo>:</mo><msup><mi>a</mi> <mn>3</mn></msup><mo>,</mo><msup><mi>b</mi> <mn>2</mn></msup><mo>,</mo><mo stretchy="false">(</mo><mi>a</mi><mi>b</mi><msup><mo stretchy="false">)</mo> <mn>2</mn></msup><mo stretchy="false">⟩</mo><mo>.</mo></mrow><annotation encoding="application/x-tex">\langle a,b : a^3, b^2,(a b)^2 \rangle.</annotation></semantics></math></div>
-<p>where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi></mrow><annotation encoding="application/x-tex">a</annotation></semantics></math> corresponds to the 3-cycle, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>123</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(123)</annotation></semantics></math>, whilst <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>b</mi></mrow><annotation encoding="application/x-tex">b</annotation></semantics></math> corresponds to any transposition.</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">⟨</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy="false">|</mo><msup><mi>a</mi> <mn>3</mn></msup><mo>,</mo><msup><mi>b</mi> <mn>2</mn></msup><mo>,</mo><mo stretchy="false">(</mo><mi>a</mi><mi>b</mi><msup><mo stretchy="false">)</mo> <mn>2</mn></msup><mo stretchy="false">⟩</mo><mo>.</mo></mrow><annotation encoding="application/x-tex">\langle a,b | a^3, b^2,(a b)^2 \rangle.</annotation></semantics></math></div>
+<p>where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi></mrow><annotation encoding="application/x-tex">a</annotation></semantics></math> corresponds to the 3-cycle, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>123</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(123)</annotation></semantics></math>, whilst <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>b</mi></mrow><annotation encoding="application/x-tex">b</annotation></semantics></math> corresponds to any transposition. It also has a presentation in which the generatores correspond to the transpositions:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">⟨</mo><msub><mi>σ</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>σ</mi> <mn>2</mn></msub><mo stretchy="false">|</mo><msubsup><mi>σ</mi> <mn>1</mn> <mn>2</mn></msubsup><mo>,</mo><msubsup><mi>σ</mi> <mn>2</mn> <mn>2</mn></msubsup><mo>,</mo><mo stretchy="false">(</mo><msub><mi>σ</mi> <mn>1</mn></msub><msub><mi>σ</mi> <mn>2</mn></msub><msup><mo stretchy="false">)</mo> <mn>3</mn></msup><mo stretchy="false">⟩</mo></mrow><annotation encoding="application/x-tex">\langle \sigma_1,\sigma_2 | \sigma_1^2,\sigma_2^2, (\sigma_1\sigma_2)^3\rangle</annotation></semantics></math></div>
+<p>It is easy to see that these relations imply that</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>σ</mi> <mn>1</mn></msub><msub><mi>σ</mi> <mn>2</mn></msub><msub><mi>σ</mi> <mn>1</mn></msub><mo>=</mo><msub><mi>σ</mi> <mn>2</mn></msub><msub><mi>σ</mi> <mn>1</mn></msub><mi>σ</mi><mn>2</mn></mrow><annotation encoding="application/x-tex">\sigma_1\sigma_2\sigma_1= \sigma_2\sigma_1\sigma2</annotation></semantics></math></div>
+<p>which relates this symmetric group to the <a class="existingWikiWord" href="/nlab/show/braid+group">braid group</a>, <strong>Br 3</strong>, and to the <a class="existingWikiWord" href="/nlab/show/trefoil+knot">trefoil group</a>. It is clear that there is an epimorphism <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mn>3</mn></msub><mo>→</mo><msub><mi>Br</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">S_3\to Br_3</annotation></semantics></math> obtained by making the two braid generators become the transpositions.</p>
+
+<h2 id="related_entries">Related entries</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/permutation">permutation</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/braid+group">braid group</a></p>
+</li>
+</ul>
 
 <h2 id="references">References</h2>
 
@@ -366,7 +382,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  5, 2018 at 02:51:32.
+  Last revised on October  5, 2018 at 03:14:14.
   See the <a href="https://ncatlab.org/nlab/history/symmetric group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
