--- a/pages/19752.html
+++ b/pages/19752.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9108/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9108/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -331,22 +331,25 @@ margin-left: 0em;
 <p><strong><a class="existingWikiWord" href="/nlab/show/character+table">character table</a> over the <a class="existingWikiWord" href="/nlab/show/real+numbers">real numbers</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding="application/x-tex">\mathbb{R}</annotation></semantics></math></strong></p>
 
 <blockquote>
-<p>check, something strange here…</p>
+<p>check</p>
 </blockquote>
 <table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/irrep">irrep</a></th><th>1</th><th>-1</th><th><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>i</mi></mrow><annotation encoding="application/x-tex">i</annotation></semantics></math></th><th>a</th><th>c</th><th>e</th><th>f</th><th>g</th></tr></thead><tbody><tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\rho_1</annotation></semantics></math></td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td></tr>
 <tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">\rho_2</annotation></semantics></math></td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">-1</td><td style="text-align: left;">-1</td><td style="text-align: left;">-1</td></tr>
 <tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">\rho_3</annotation></semantics></math></td><td style="text-align: left;">2</td><td style="text-align: left;">2</td><td style="text-align: left;">2</td><td style="text-align: left;">-1</td><td style="text-align: left;">-1</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td></tr>
 <tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">\rho_4</annotation></semantics></math></td><td style="text-align: left;">3</td><td style="text-align: left;">3</td><td style="text-align: left;">-1</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td><td style="text-align: left;">1</td><td style="text-align: left;">1</td><td style="text-align: left;">-1</td></tr>
 <tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>5</mn></msub></mrow><annotation encoding="application/x-tex">\rho_5</annotation></semantics></math></td><td style="text-align: left;">3</td><td style="text-align: left;">3</td><td style="text-align: left;">-1</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td><td style="text-align: left;">-1</td><td style="text-align: left;">-1</td><td style="text-align: left;">1</td></tr>
-<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>6</mn></msub><mo>⊕</mo><msub><mi>ρ</mi> <mn>6</mn></msub></mrow><annotation encoding="application/x-tex">\rho_6 \oplus \rho_6</annotation></semantics></math></td><td style="text-align: left;">4</td><td style="text-align: left;">-4</td><td style="text-align: left;">0</td><td style="text-align: left;">2</td><td style="text-align: left;">-2</td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><msqrt><mn>2</mn></msqrt></mrow><annotation encoding="application/x-tex">2 \sqrt{2}</annotation></semantics></math></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>2</mn><msqrt><mn>2</mn></msqrt></mrow><annotation encoding="application/x-tex">-2 \sqrt{2}</annotation></semantics></math></td><td style="text-align: left;">0</td></tr>
-<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>7</mn></msub><mo>⊕</mo><msub><mi>ρ</mi> <mn>7</mn></msub></mrow><annotation encoding="application/x-tex">\rho_7 \oplus \rho_7</annotation></semantics></math></td><td style="text-align: left;">4</td><td style="text-align: left;">-4</td><td style="text-align: left;">0</td><td style="text-align: left;">2</td><td style="text-align: left;">-2</td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>2</mn><msqrt><mn>2</mn></msqrt></mrow><annotation encoding="application/x-tex">-2 \sqrt{2}</annotation></semantics></math></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><msqrt><mn>2</mn></msqrt></mrow><annotation encoding="application/x-tex">2 \sqrt{2}</annotation></semantics></math></td><td style="text-align: left;">0</td></tr>
-<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>8</mn></msub><mo>⊕</mo><msub><mi>ρ</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">\rho_8 \oplus \rho_8</annotation></semantics></math></td><td style="text-align: left;">8</td><td style="text-align: left;">-8</td><td style="text-align: left;">0</td><td style="text-align: left;">-2</td><td style="text-align: left;">2</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td></tr>
+<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>6</mn></msub><mo>⊕</mo><msub><mi>ρ</mi> <mn>7</mn></msub></mrow><annotation encoding="application/x-tex">\rho_6 \oplus \rho_7</annotation></semantics></math></td><td style="text-align: left;">4</td><td style="text-align: left;">-4</td><td style="text-align: left;">0</td><td style="text-align: left;">2</td><td style="text-align: left;">-2</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td></tr>
+<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ρ</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">\rho_8</annotation></semantics></math></td><td style="text-align: left;">4</td><td style="text-align: left;">-4</td><td style="text-align: left;">0</td><td style="text-align: left;">-1</td><td style="text-align: left;">1</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td><td style="text-align: left;">0</td></tr>
 </tbody></table>
 <p><strong>References</strong></p>
 
 <ul>
 <li>
 <p>GroupProps, <em><a href="https://groupprops.subwiki.org/wiki/Linear_representation_theory_of_binary_octahedral_group">Linear representation theory of binary octahedral group</a></em></p>
+</li>
+
+<li>
+<p>Groupnames, <em><a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/1/GL(2,3).html">GL(2,3)</a></em></p>
 </li>
 
 <li>
@@ -363,14 +366,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  5, 2018 at 02:38:39.
+  Last revised on October  5, 2018 at 06:57:22.
   See the <a href="https://ncatlab.org/nlab/history/character table of 2O" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/character+table+of+2O" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character+table+of+2O/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/character+table+of+2O" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character+table+of+2O" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/character+table+of+2O" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character+table+of+2O/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/character+table+of+2O" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character+table+of+2O" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/character table of 2O/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
