--- a/pages/2171.html
+++ b/pages/2171.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3811/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3811/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -498,6 +498,8 @@ margin-left: 0em;
 <p>The <em>braid group</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Br</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">Br_n</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/group">group</a> whose elements are <a class="existingWikiWord" href="/nlab/show/isotopy">isotopy</a> classes of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/dimension">1-dimensional</a> <em>braids</em> running vertically in 3-dimensional <a class="existingWikiWord" href="/nlab/show/Cartesian+space">Cartesian space</a>, the group operation being their concatenation.</p>
 
 <p>Here a <em>braid</em> with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> strands is thought of as <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> pieces of string joining <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> points at the top of the diagram with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-points at the bottom.</p>
+
+<p><a class="existingWikiWord" href="/nlab/show/3-strand-braid-1-SVG">3-strand-braid-1-SVG</a></p>
 <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="169.27875" height="252.11273" id="svg2" sodipodi:version="0.32" inkscape:version="0.46" sodipodi:docname="3-braid.svg" inkscape:output_extension="org.inkscape.output.svg.inkscape" version="1.0">
   <defs id="defs4">
     <inkscape:perspective sodipodi:type="inkscape:persp3d" inkscape:vp_x="0 : 526.18109 : 1" inkscape:vp_y="0 : 1000 : 0" inkscape:vp_z="744.09448 : 526.18109 : 1" inkscape:persp3d-origin="372.04724 : 350.78739 : 1" id="perspective10"></inkscape:perspective>
@@ -519,7 +521,7 @@ margin-left: 0em;
     <path style="fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:0.69349128px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" d="M 285.40892,215.42417 L 235.87382,262.97786 M 226.95752,274.86628 L 202.18997,298.64313 L 202.18997,381.86208 M 285.40892,132.20522 L 285.40892,215.42417" id="path2389" sodipodi:nodetypes="ccccccc"></path>
   </g>
 </svg>
-<p>(This is a picture of a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>3</mn></mrow><annotation encoding="application/x-tex">3</annotation></semantics></math>-strand braid.)</p>
+<p>(This is a picture of a 3-strand braid.)</p>
 
 <p>We can transform / ‘isotope’ these braid diagrams just as we can transform <a class="existingWikiWord" href="/nlab/show/knot+diagrams">knot diagrams</a>, again using <a class="existingWikiWord" href="/nlab/show/Reidemeister+moves">Reidemeister moves</a>. The ‘isotopy’ classes of braid diagrams form a group in which the composition is obtained by putting one diagram above another.</p>
 <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="162.66582" height="336.51199" id="svg2481" sodipodi:version="0.32" inkscape:version="0.46" sodipodi:docname="composition.svg" inkscape:output_extension="org.inkscape.output.svg.inkscape" version="1.0">
@@ -729,14 +731,14 @@ y_1 y_2 \dots y_{n-1} y_n^2 y_{n-1}\dots y_2 y_1
 
 <div class="revisedby">
   <p>
-  Last revised on October  5, 2018 at 03:15:50.
+  Last revised on October  5, 2018 at 06:39:21.
   See the <a href="https://ncatlab.org/nlab/history/braid group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/braid+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/braid+group/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/braid+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/braid+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/braid+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/braid+group/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/braid+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/braid+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/braid group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
