--- a/pages/10915.html
+++ b/pages/10915.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8177/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8177/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -323,6 +323,7 @@ margin-left: 0em;
 <li><a href='#archimedean_definition'>“Archimedean” definition</a></li>
 <li><a href='#other_formulas'>Other formulas</a></li>
 <li><a href='#irrationality_and_transcendence'>Irrationality and transcendence</a></li>
+<li><a href='#related_entries'>Related entries</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
@@ -480,6 +481,18 @@ margin-left: 0em;
 
 <p>A proof is given in <a href="http://en.wikipedia.org/wiki/Proof_that_%CF%80_is_transcendental#Proof">Wikipedia</a>. It follows that if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>π</mi></mrow><annotation encoding="application/x-tex">\pi</annotation></semantics></math> and therefore <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>i</mi><mi>π</mi></mrow><annotation encoding="application/x-tex">i\pi</annotation></semantics></math> were algebraic, then <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>exp</mi><mo stretchy="false">(</mo><mi>i</mi><mi>π</mi><mo stretchy="false">)</mo><mo>=</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">\exp(i\pi) = -1</annotation></semantics></math> would be transcendental, which is absurd.</p>
 
+<h2 id="related_entries">Related entries</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/e">e</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/golden+ratio">golden ratio</a></p>
+</li>
+</ul>
+
 <h2 id="references">References</h2>
 
 <p>A whole chapter on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>π</mi></mrow><annotation encoding="application/x-tex">\pi</annotation></semantics></math> written for the mathematically literate is given in</p>
@@ -505,14 +518,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  4, 2018 at 02:22:09.
+  Last revised on October  5, 2018 at 07:35:54.
   See the <a href="https://ncatlab.org/nlab/history/pi" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/pi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pi/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/pi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/pi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pi/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/pi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/pi/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
