--- a/pages/19757.html
+++ b/pages/19757.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9114/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9114/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -435,7 +435,13 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>is called the <em>golden ratio</em> (sometimes the <em>golden mean</em>).</p>
 
-<p>The golden ratio is an <a class="existingWikiWord" href="/nlab/show/algebraic+integer">algebraic integer</a> and generates the ring of algebraic integers in the quadratic subfield <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℚ</mi><mo stretchy="false">(</mo><msqrt><mn>5</mn></msqrt><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{Q}(\sqrt{5})</annotation></semantics></math> of the <a class="existingWikiWord" href="/nlab/show/cyclotomic+field">cyclotomic field</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℚ</mi><mo stretchy="false">(</mo><mi>ζ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{Q}(\zeta)</annotation></semantics></math> of fifth <a class="existingWikiWord" href="/nlab/show/roots+of+unity">roots of unity</a>.</p>
+<p>The golden ratio is an <a class="existingWikiWord" href="/nlab/show/algebraic+integer">algebraic integer</a> and generates the ring of algebraic integers in the quadratic subfield <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℚ</mi><mo stretchy="false">(</mo><msqrt><mn>5</mn></msqrt><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{Q}(\sqrt{5})</annotation></semantics></math> of the <a class="existingWikiWord" href="/nlab/show/cyclotomic+field">cyclotomic field</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℚ</mi><mo stretchy="false">(</mo><mi>ζ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{Q}(\zeta)</annotation></semantics></math> of fifth <a class="existingWikiWord" href="/nlab/show/roots+of+unity">roots of unity</a>. It also generates the <a class="existingWikiWord" href="/nlab/show/group+of+units">group of units</a> (modulo its <a class="existingWikiWord" href="/nlab/show/torsion+subgroup">torsion subgroup</a>) of the ring of algebraic integers <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℤ</mi><mo stretchy="false">[</mo><mi>ϕ</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">\mathbb{Z}[\phi]</annotation></semantics></math>.</p>
+
+<p>The golden ratio is of course an <a class="existingWikiWord" href="/nlab/show/irrational+number">irrational number</a>, and is distinguished among irrational numbers by having the slowest <a class="existingWikiWord" href="/nlab/show/convergence+of+a+sequence">convergence</a> rate of rational approximants obtained by truncating its <a class="existingWikiWord" href="/nlab/show/continued+fraction">continued fraction</a> expansion</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi><mo>=</mo><mn>1</mn><mo>+</mo><mfrac><mn>1</mn><mrow><mn>1</mn><mo>+</mo><mfrac><mn>1</mn><mrow><mn>1</mn><mo>+</mo><mfrac><mn>1</mn><mrow><mn>1</mn><mo>+</mo><mi>…</mi></mrow></mfrac></mrow></mfrac></mrow></mfrac></mrow><annotation encoding="application/x-tex">\phi = 1 + \frac1{1 + \frac1{1 + \frac1{1 + \ldots}}}</annotation></semantics></math></div>
+<p>Its rational approximants <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi><mo stretchy="false">/</mo><mi>q</mi></mrow><annotation encoding="application/x-tex">p/q</annotation></semantics></math> are ratios of successive <span class="newWikiWord">Fibonacci numbers<a href="/nlab/new/Fibonacci+numbers">?</a></span>.</p>
+
+<p>It is widely believed that this slowest rate of convergence explains observations of phyllotaxis in botany, i.e., the arrangement of leaves and plant structures such as the scales of pinecones and pineapples, in which nascent leaves or buds tend to form at the least crowded available spots on the growing plant, whereupon in the ensuing jostling the structures become arranged as “Fermat spirals” with a Fibonacci number of structures along each spiral.</p>
 
 <h2 id="related_entries">Related entries</h2>
 
@@ -466,14 +472,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  5, 2018 at 07:43:47.
+  Last revised on October  5, 2018 at 08:53:25.
   See the <a href="https://ncatlab.org/nlab/history/golden ratio" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/golden+ratio" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/golden+ratio/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/golden+ratio" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/golden+ratio" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/golden+ratio" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/golden+ratio/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/golden+ratio" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/golden+ratio" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/golden ratio/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
