--- a/pages/19755.html
+++ b/pages/19755.html
@@ -323,7 +323,7 @@ margin-left: 0em;
 
 <h2 id="representation_of_elements">Representation of elements.</h2>
 
-<p>We illustrate this by an example.</p>
+<p>We first illustrate this by an example.</p>
 
 <h3 id="example__the_symmetric_group_">Example : The symmetric group, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">S_3</annotation></semantics></math>.</h3>
 
@@ -382,14 +382,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  5, 2018 at 03:14:14.
+  Last revised on October  5, 2018 at 11:49:42.
   See the <a href="https://ncatlab.org/nlab/history/symmetric group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/symmetric+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/symmetric+group/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/symmetric+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/symmetric+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/symmetric+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/symmetric+group/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/symmetric+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/symmetric+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/symmetric group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
