--- a/pages/19113.html
+++ b/pages/19113.html
@@ -482,6 +482,7 @@ margin-left: 0em;
 <li><a href='#statement'>Statement</a></li>
 <li><a href='#properties'>Properties</a></li>
 <ul>
+<li><a href='#subgroup_lattice'>Subgroup lattice</a></li>
 <li><a href='#GroupCohomology'>Group cohomology</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
@@ -522,6 +523,39 @@ margin-left: 0em;
 
 <h2 id="properties">Properties</h2>
 
+<h3 id="subgroup_lattice">Subgroup lattice</h3>
+
+<p>Part looks like so</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>↗</mo></mtd> <mtd></mtd> <mtd><mo>↖</mo></mtd></mtr> <mtr><mtd><mn>2</mn><mi>O</mi></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mn>2</mn><mi>I</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>↖</mo></mtd> <mtd></mtd> <mtd><mo>↗</mo></mtd> <mtd><mo stretchy="false">↑</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mn>2</mn><mi>T</mi></mtd> <mtd></mtd> <mtd><mn>2</mn><msub><mi>D</mi> <mn>6</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↑</mo></mtd> <mtd><mo>↖</mo></mtd> <mtd><mo stretchy="false">↑</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mn>2</mn><msub><mi>D</mi> <mn>4</mn></msub></mtd> <mtd></mtd> <mtd><msub><mi>C</mi> <mn>6</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↑</mo></mtd> <mtd></mtd> <mtd><mo stretchy="false">↑</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><msub><mi>C</mi> <mn>4</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↑</mo></mtd> <mtd><mo>↗</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><msub><mi>C</mi> <mn>2</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↑</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mn>1</mn></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+  \array{
+    &amp;&amp; SU(2)
+    \\
+    &amp; \nearrow &amp;&amp; \nwarrow
+    \\
+    2 O &amp;&amp; &amp;&amp; 2I
+    \\
+    &amp; \nwarrow &amp;&amp; \nearrow &amp; \uparrow
+    \\
+    &amp;&amp; 2 T &amp;&amp; 2 D_6
+    \\
+    &amp;&amp; \uparrow &amp; \nwarrow &amp; \uparrow
+    \\
+    &amp;&amp; 2 D_4 &amp;&amp; C_6
+    \\
+    &amp;&amp; \uparrow &amp; &amp; \uparrow
+    \\
+    &amp;&amp; C_4
+    \\
+    &amp;&amp; \uparrow &amp; \nearrow
+    \\
+    &amp;&amp; C_2
+    \\
+    &amp;&amp; \uparrow
+    \\
+    &amp;&amp; 1
+  }
+
+</annotation></semantics></math></div>
 <h3 id="GroupCohomology">Group cohomology</h3>
 
 <div class="num_prop" id="GroupCohomologyOfFiniteSubgroupsOfSU2">
@@ -663,14 +697,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  7, 2018 at 12:42:33.
+  Last revised on October  7, 2018 at 14:16:17.
   See the <a href="https://ncatlab.org/nlab/history/finite rotation group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/finite+rotation+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+rotation+group/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/finite+rotation+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+rotation+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/finite+rotation+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+rotation+group/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/finite+rotation+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+rotation+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/finite rotation group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
