--- a/pages/11009.html
+++ b/pages/11009.html
@@ -396,10 +396,12 @@ margin-left: 0em;
 <p>A classical reference is</p>
 
 <ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Paul+Bernays">Paul Bernays</a> , <em>Sur le platonisme dans les mathématiques</em> , L’enseignement mathématique <strong>34</strong> (1935) pp.52-69. (<a href="http://www.e-periodica.ch/cntmng?pid=ens-001:1935:34::14">pdf</a>)</p>
-</li>
+<li><a class="existingWikiWord" href="/nlab/show/Paul+Bernays">Paul Bernays</a> , <em>Sur le platonisme dans les mathématiques</em> , L’enseignement mathématique <strong>34</strong> (1935) pp.52-69. (<a href="http://www.e-periodica.ch/cntmng?pid=ens-001:1935:34::14">pdf</a>)</li>
+</ul>
 
+<p>Other texts include</p>
+
+<ul>
 <li>
 <p>Mark Balaguer, <em>Platonism &amp; Anti-Platonism in Mathematics</em> , Oxford University Press, 1998.</p>
 </li>
@@ -414,7 +416,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  8, 2018 at 05:57:21.
+  Last revised on October  8, 2018 at 06:02:10.
   See the <a href="https://ncatlab.org/nlab/history/Platonism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
