--- a/pages/19749.html
+++ b/pages/19749.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -353,20 +353,20 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/James+Montaldi">James Montaldi</a>, <em><a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/BinaryCubic">Real representations – Binary cubic – Q8</a></em></p>
 </li>
 </ul>
-</body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/character+tables">character tables</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October  5, 2018 at 02:39:48.
+  Last revised on October  8, 2018 at 06:21:59.
   See the <a href="https://ncatlab.org/nlab/history/character table of 2D4=Dic2=Q8" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/character+table+of+2D4%3DDic2%3DQ8" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character+table+of+2D4%3DDic2%3DQ8/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/character+table+of+2D4%3DDic2%3DQ8" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character+table+of+2D4%3DDic2%3DQ8" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/character+table+of+2D4%3DDic2%3DQ8" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character+table+of+2D4%3DDic2%3DQ8/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/character+table+of+2D4%3DDic2%3DQ8" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character+table+of+2D4%3DDic2%3DQ8" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/character table of 2D4=Dic2=Q8/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
