--- a/pages/19758.html
+++ b/pages/19758.html
@@ -342,20 +342,20 @@ margin-left: 0em;
 <p>Bockland, <em>Character tables and McKay quivers</em> (<a href="https://staff.fnwi.uva.nl/r.r.j.bocklandt/notes/kleinian.pdf">pdf</a>)</p>
 </li>
 </ul>
-</body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/character+tables">character tables</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October  5, 2018 at 19:41:18.
+  Last revised on October  8, 2018 at 06:22:08.
   See the <a href="https://ncatlab.org/nlab/history/character table of 2I" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/character+table+of+2I" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character+table+of+2I/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/character+table+of+2I" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character+table+of+2I" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/character+table+of+2I" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character+table+of+2I/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/character+table+of+2I" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character+table+of+2I" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/character table of 2I/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
