--- a/pages/19760.html
+++ b/pages/19760.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9117/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9117/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -342,20 +342,20 @@ margin-left: 0em;
 <ul>
 <li>Groupnames, <em><a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/1/GL(2,3).html">GL(2,3)</a></em></li>
 </ul>
-</body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/character+tables">character tables</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Created on October  6, 2018 at 07:49:46.
+  Last revised on October  8, 2018 at 06:21:24.
   See the <a href="https://ncatlab.org/nlab/history/character table of GL(2,3)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/character+table+of+GL%282%2C3%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/character+table+of+GL%282%2C3%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character+table+of+GL%282%2C3%29/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/character+table+of+GL%282%2C3%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character+table+of+GL%282%2C3%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/character table of GL(2,3)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
