--- a/pages/19113.html
+++ b/pages/19113.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8437/#Item_14" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8437/#Item_16" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -482,7 +482,7 @@ margin-left: 0em;
 <li><a href='#statement'>Statement</a></li>
 <li><a href='#properties'>Properties</a></li>
 <ul>
-<li><a href='#subgroup_lattice'>Subgroup lattice</a></li>
+<li><a href='#SubgroupLattice'>Subgroup lattice</a></li>
 <li><a href='#GroupCohomology'>Group cohomology</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
@@ -523,39 +523,14 @@ margin-left: 0em;
 
 <h2 id="properties">Properties</h2>
 
-<h3 id="subgroup_lattice">Subgroup lattice</h3>
+<h3 id="SubgroupLattice">Subgroup lattice</h3>
 
-<p>Part looks like so</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>↗</mo></mtd> <mtd></mtd> <mtd><mo>↖</mo></mtd></mtr> <mtr><mtd><mn>2</mn><mi>O</mi></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mn>2</mn><mi>I</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>↖</mo></mtd> <mtd></mtd> <mtd><mo>↗</mo></mtd> <mtd><mo stretchy="false">↑</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mn>2</mn><mi>T</mi></mtd> <mtd></mtd> <mtd><mn>2</mn><msub><mi>D</mi> <mn>6</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↑</mo></mtd> <mtd><mo>↖</mo></mtd> <mtd><mo stretchy="false">↑</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mn>2</mn><msub><mi>D</mi> <mn>4</mn></msub></mtd> <mtd></mtd> <mtd><msub><mi>C</mi> <mn>6</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↑</mo></mtd> <mtd></mtd> <mtd><mo stretchy="false">↑</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><msub><mi>C</mi> <mn>4</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↑</mo></mtd> <mtd><mo>↗</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><msub><mi>C</mi> <mn>2</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo stretchy="false">↑</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mn>1</mn></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
-  \array{
-    &amp;&amp; SU(2)
-    \\
-    &amp; \nearrow &amp;&amp; \nwarrow
-    \\
-    2 O &amp;&amp; &amp;&amp; 2I
-    \\
-    &amp; \nwarrow &amp;&amp; \nearrow &amp; \uparrow
-    \\
-    &amp;&amp; 2 T &amp;&amp; 2 D_6
-    \\
-    &amp;&amp; \uparrow &amp; \nwarrow &amp; \uparrow
-    \\
-    &amp;&amp; 2 D_4 &amp;&amp; C_6
-    \\
-    &amp;&amp; \uparrow &amp; &amp; \uparrow
-    \\
-    &amp;&amp; C_4
-    \\
-    &amp;&amp; \uparrow &amp; \nearrow
-    \\
-    &amp;&amp; C_2
-    \\
-    &amp;&amp; \uparrow
-    \\
-    &amp;&amp; 1
-  }
+<p>The <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> <a class="existingWikiWord" href="/nlab/show/lattice">lattice</a> of <a class="existingWikiWord" href="/nlab/show/SU%282%29">SU(2)</a> under the three exceptional <a class="existingWikiWord" href="/nlab/show/finite+group">finite</a> subgroups <a class="existingWikiWord" href="/nlab/show/2T">2T</a>, <a class="existingWikiWord" href="/nlab/show/2O">2O</a>, <span class="newWikiWord">2I<a href="/nlab/new/2I">?</a></span> (from Theorem <a class="maruku-ref" href="#ClassificationOfFiniteSubgroupsOfSO3"></a>) looks as follows:</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/ADESubgroupLatticeUnderExceptional.jpg" width="490" />
+</center>
+<p>This is obtained from the subgroup lattice as shown on <a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/">GroupNames</a> for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>I</mi><mo>≃</mo></mrow><annotation encoding="application/x-tex">2I \simeq</annotation></semantics></math> <a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/97/SL(2,5).html">SL(2,5)</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>O</mi><mo>≃</mo></mrow><annotation encoding="application/x-tex">2O \simeq </annotation></semantics></math> <a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/1/CSU(2,3).html">CSU(2,3)</a></p>
 
-</annotation></semantics></math></div>
 <h3 id="GroupCohomology">Group cohomology</h3>
 
 <div class="num_prop" id="GroupCohomologyOfFiniteSubgroupsOfSU2">
@@ -697,14 +672,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  7, 2018 at 14:16:17.
+  Last revised on October  8, 2018 at 09:58:38.
   See the <a href="https://ncatlab.org/nlab/history/finite rotation group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/finite+rotation+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+rotation+group/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/finite+rotation+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+rotation+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/finite+rotation+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+rotation+group/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/finite+rotation+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+rotation+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/finite rotation group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
